aparentemente todos os erros foram removidos

--- a/Etapa3/Makefile
+++ b/Etapa3/Makefile
@@ -7,11 +7,26 @@
 # Therefore, there must be a header of it to be included in lexer.l
 #
 
-etapa3: y.tab.c lex.yy.c
-	gcc -o etapa3 lex.yy.c
+etapa3: main.o lex.yy.o y.tab.o hash.o
+	gcc -c main.o lex.yy.o y.tab.o hash.o -o etapa3
+
+main.o: main.c
+	gcc -c main.c
+
+hash.o: hash.c
+	gcc -c hash.c
+
+y.tab.o: y.tab.c 
+	gcc -c y.tab.c
+
+lex.yy.o: lex.yy.c
+	gcc -c lex.yy.c
+
 y.tab.c: parser.y
 	yacc -d parser.y
+
 lex.yy.c: scanner.l
 	lex scanner.l 
+
 clean:
-	rm *.o lex.yy.c etapa3 y.output y.tab.c y.tab.h
+	rm lex.yy.c y.tab.c *.o etapa3
