--- a/Etapa3/Makefile
+++ b/Etapa3/Makefile
@@ -7,14 +7,17 @@
 # Therefore, there must be a header of it to be included in lexer.l
 #
 
-etapa3: main.o lex.yy.o y.tab.o hash.o
-	gcc main.o lex.yy.o y.tab.o hash.o -o etapa3
+etapa3: main.o lex.yy.o y.tab.o hash.o ast.o
+	gcc main.o lex.yy.o y.tab.o hash.o ast.o -o etapa3
 
 main.o: main.c
 	gcc -c main.c
 
 hash.o: hash.c
 	gcc -c hash.c
+
+ast.o: ast.c
+	gcc -c ast.c
 
 y.tab.o: y.tab.c 
 	gcc -c y.tab.c
